--- a/index.html
+++ b/index.html
@@ -14,41 +14,44 @@
     />
     <!-- Template CSS File ⬇ -->
     <link rel="stylesheet" type="text/css" href="CSS/style.css" />
-    <!-- Template JS Files ⬇ -->
   </head>
   <body>
     <header>
       <nav>
-        <a class="nav-logo" href="index.html"><img src="img/favicon.png" alt="Logo" /> Cactus</a>
-        <div>
-          <i class="nav-menu-btn fa-solid fa-bars"></i>
-          <ul class="nav-links">
-            <li><a href="#home" class="active">Home</a></li>
-            <li><a href="#news">News</a></li>
-            <li><a href="#shop">Shop</a></li>
-            <li><a href="#care">Care</a></li>
-            <li><a href="#contact">Contact</a></li>
-          </ul>
-          <ul class="nav-user">
-            <li>
-              <a href="#"><i class="fa-regular fa-user"></i></a>
-            </li>
-            <li>
-              <a href="#"><i class="fa-regular fa-cart-shopping"></i></a>
-            </li>
-          </ul>
-        </div>
+        <a class="nav-logo" href="index.html">Cactus</a>
+        <i class="nav-menu-btn fa-solid fa-bars"></i>
+        <ul class="nav-links">
+          <li><a href="#home" class="active">Home</a></li>
+          <li><a href="#news">News</a></li>
+          <li><a href="#shop">Shop</a></li>
+          <li><a href="#care">Care</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+        <ul class="nav-user">
+          <li>
+            <a href="#"><i class="fa-regular fa-user"></i></a>
+          </li>
+          <li>
+            <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
+          </li>
+        </ul>
       </nav>
       <section id="home">
         <img class="home-img" src="img/home-cactus.png" alt="Home page img" />
         <div class="home-details">
-          <h1>ORNAMENTAL <span>PLANTS</span> FOR YOUR HOME</h1>
+          <h1>
+            ORNAMENTAL<br />
+            <span>PLANTS</span> FOR<br />
+            YOUR HOME
+          </h1>
           <p>
             We design ornamental plnts for your home in-house for an <br />
             original style and quality you won't find anywhere else.
           </p>
           <div class="home-btns">
-            <a href="#shop"><i class="fa-solid fa-arrow-right"></i> GO TO SHOP</a>
+            <a href="#shop"
+              ><i class="fa-solid fa-arrow-right"></i> GO TO SHOP</a
+            >
             <a href="#">MORE DETAILS</a>
           </div>
         </div>
@@ -56,79 +59,114 @@
     </header>
     <main>
       <section id="news">
-        <div>
+        <div class="news-details">
           <h2 class="title">
             NEW PLANTS FOR <br />
             YOUR HOME
           </h2>
-          <p class="nav-para">
+          <p class="news-para">
             Select new ornamental plants for home decoration <br />
             and obtain an atmosphere of harmony and <br />
             freshness.
           </p>
         </div>
         <div class="news-imgs">
-          <img src="img/new-cactus-1.png" alt="cactus news img" />
-          <img src="img/new-cactus-2.png" alt="cactus news img" />
-          <img src="img/new-cactus-3.png" alt="cactus news img" />
+          <div class="img-box">
+            <img src="img/new-cactus-1.png" alt="cactus news img" />
+            <p class="cactus-name">
+              Gymnocalycium<br />
+              Cactus
+            </p>
+          </div>
+          <div class="img-box">
+            <img src="img/new-cactus-2.png" alt="cactus news img" />
+            <p class="cactus-name">
+              Lily Pad<br />
+              Succulent
+            </p>
+          </div>
+          <div class="img-box">
+            <img src="img/new-cactus-3.png" alt="cactus news img" />
+            <p class="cactus-name">Rebutia Cactus</p>
+          </div>
         </div>
       </section>
       <section id="shop">
         <h2 class="title">THE BEST PLANTS</h2>
         <div class="product-table">
           <div class="product">
-            <img class="product-img" src="img/shop-cactus-1.png" alt="cactus shop img" />
+            <img
+              class="product-img"
+              src="img/shop-cactus-1.png"
+              alt="cactus shop img"
+            />
             <h3 class="product-title">
               Gymnocalycium<br />
               Cactus
             </h3>
-            <div>
+            <div class="product-info">
               <p class="product-amount">$15</p>
-              <i class="product-icon fa-regular fa-bag-shopping"></i>
+              <i class="fa-solid fa-bag-shopping"></i>
             </div>
           </div>
           <div class="product">
-            <img class="product-pic" src="img/shop-cactus-2.png" alt="cactus shop img" />
+            <img
+              class="product-pic"
+              src="img/shop-cactus-2.png"
+              alt="cactus shop img"
+            />
             <h3 class="product-title">
               Echeveria<br />
               Succulent
             </h3>
-            <div>
+            <div class="product-info">
               <p class="product-amount">$10</p>
-              <i class="product-icon fa-regular fa-bag-shopping"></i>
+              <i class="fa-solid fa-bag-shopping"></i>
             </div>
           </div>
           <div class="product">
-            <img class="product-pic" src="img/shop-cactus-3.png" alt="cactus shop img" />
+            <img
+              class="product-pic"
+              src="img/shop-cactus-3.png"
+              alt="cactus shop img"
+            />
             <h3 class="product-title">
               Ferocactus<br />
               Cactus
             </h3>
-            <div>
+            <div class="product-info">
               <p class="product-amount">$15</p>
-              <i class="product-icon fa-regular fa-bag-shopping"></i>
+              <i class="fa-solid fa-bag-shopping"></i>
             </div>
           </div>
           <div class="product">
-            <img class="product-pic" src="img/shop-cactus-4.png" alt="cactus shop img" />
+            <img
+              class="product-pic"
+              src="img/shop-cactus-4.png"
+              alt="cactus shop img"
+            />
             <h3 class="product-title">
               Key Lime Pie<br />
               Succulent
             </h3>
-            <div>
+            <div class="product-info">
               <p class="product-amount">$10</p>
-              <i class="product-icon fa-regular fa-bag-shopping"></i>
+              <i class="fa-solid fa-bag-shopping"></i>
             </div>
           </div>
           <div class="product">
-            <img class="product-pic" src="img/shop-cactus-5.png" alt="cactus shop img" />
+            <img
+              class="product-pic"
+              src="img/shop-cactus-5.png"
+              alt="cactus shop img"
+            />
             <h3 class="product-title">
               Melocactus<br />
               Cactus
             </h3>
-            <div>
+            <div class="product-info">
               <p class="product-amount">$15</p>
-              <i class="product-icon fa-regular fa-bag-shopping"></i>
+              <i class="fa-solid fa-bag-shopping"></i>
             </div>
           </div>
         </div>
@@ -138,7 +176,7 @@
           CARE AND HEALTH FOR <br />
           <span>YOUR CACRTUS</span>
         </h2>
-        <div>
+        <div class="care-box">
           <img class="care-img" src="img/care-cactus.png" alt="cactus img" />
           <ul>
             <li>
@@ -157,7 +195,7 @@
             <li>
               Do not water more than necessary, as it can<br />
               accumulate too much water and the plant<br />
-              will rot>
+              will rot.
             </li>
             <li>
               Do not expose to high temperatures, as<br />
@@ -171,59 +209,69 @@
           YOU WANT A CACTUS<br />
           CONTACT US
         </h2>
-        <div>
+        <div class="contact-box">
           <div>
-            <div>
+            <div class="contact-details">
               <h5>Write to us</h5>
               <ul>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
+                <li>
+                  <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
+                </li>
+                <li>
+                  <a href="#"
+                    ><i class="fa-brands fa-facebook-messenger"></i
+                  ></a>
+                </li>
+                <li>
+                  <a href="#"><i class="fa-solid fa-envelope"></i></a>
+                </li>
               </ul>
             </div>
-            <div>
+            <div class="contact-details">
               <h5>Call us at the numbers</h5>
               <p>+00-987-7654-321</p>
               <p>+11-012345</p>
             </div>
-            <div>
+            <div class="contact-details">
               <h5>Find us here</h5>
               <p>Lima - Sun City - Peru</p>
               <p>Av. Moon #4321</p>
             </div>
           </div>
-          <img class="contact-img" src="img/contact-cactus.png" alt="Cactus img" />
+          <img
+            class="contact-img"
+            src="img/contact-cactus.png"
+            alt="Cactus img"
+          />
         </div>
       </section>
     </main>
     <footer>
       <div class="footer-table">
         <div>
-          <h6>
-            <a href="#home"
-              ><img src="img/favicon.png" alt="website logo" />Cactus</a
-            >
+          <h6 class="footer-logo">
+            <a href="#home">Cactus</a>
           </h6>
           <p>
             Choose the best<br />
             plants for your home.
           </p>
         </div>
-        <div>
+        <div class="footer-info">
           <div>
-            <h3>COMPANY</h3>
-            <p>About Us</p>
-            <p>Products</p>
-            <p>Features</p>
+            <h6>COMPANY</h6>
+            <a href="#">About Us</a>
+            <a href="#">Products</a>
+            <a href="#">Features</a>
           </div>
           <div>
-            <h3>INFORMATION</h3>
-            <p>Blogs & News</p>
-            <p>Contacts Us</p>
-            <p>FAQs</p>
+            <h6>INFORMATION</h6>
+            <a href="#">Blogs & News</a>
+            <a href="#">Contacts Us</a>
+            <a href="#">FAQs</a>
           </div>
           <div>
-            <h3>SOCIAL MEDIA</h3>
+            <h6>SOCIAL MEDIA</h6>
             <ul>
               <li>
                 <a href="#"><i class="fa-brands fa-facebook"></i></a>
@@ -238,7 +286,7 @@
           </div>
         </div>
       </div>
-      <p>&#169;All Rights Reserved By Bedimcode</p>
+      <p class="copyright">&#169;All Rights Reserved By Bedimcode</p>
     </footer>
 
     <!-- Font Awesome -->
